# hyper_dm

./: .gitignore  README.md  export.py  infer.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml
configs/: brain_multicoil.yaml  cls_brain_eu.yaml  cls_brain_standard.yaml  cls_brain_uncertainty.yaml  cls_knee_eu.yaml  cls_knee_standard.yaml  cls_knee_uncertainty.yaml  ct_luna16.yaml  downstream.yaml  knee_singlecoil.yaml  seg_luna16_au.yaml  seg_luna16_eu.yaml  seg_luna16_standard.yaml  segmentation.yaml
hyper_dm/: __init__.py
hyper_dm/data/: __init__.py  ct_dataset.py  fastmri_brain.py  fastmri_knee.py  mask_generation.py  mri_classification.py  segmentation.py
hyper_dm/inference/: __init__.py  evaluate_seg.py  export.py  reconstruct.py
hyper_dm/models/: __init__.py  blocks.py  diffusion.py  hypernet.py  patch3d.py  salm.py  score_mri.py  unet.py
hyper_dm/trainers/: __init__.py  hyperdm.py  segmentation.py
slurm/: cls_brain_eu.slurm  cls_brain_standard.slurm  cls_brain_uncertainty.slurm  cls_knee_eu.slurm  cls_knee_standard.slurm  cls_knee_uncertainty.slurm  env.sh  export_recons.slurm  infer_brain.slurm  infer_knee.slurm  infer_luna16.slurm  seg_luna16_au.slurm  seg_luna16_eu.slurm  seg_luna16_standard.slurm  submit_all.sh  train_brain_au.slurm  train_brain_eu.slurm  train_brain_standard.slurm  train_knee_au.slurm  train_knee_eu.slurm  train_knee_standard.slurm  train_luna16_au.slurm  train_luna16_eu.slurm  train_luna16_standard.slurm
tests/: test_data.py  test_diffusion.py  test_evaluation.py  test_metrics.py  test_models.py
(+6 files in other folders)
